frontend/src/assets/css/custom.css
.page-topbar {
  background-color: #17191B;
}

#main-menu-wrapper li.open a {
  background-color: rgba(33, 33, 33, 0.1);
  border-left: 4px solid #f0373c;
}

#main-menu-wrapper li a:hover {
  background-color: rgba(124, 124, 124, 0.1);;
  border-left: 4px solid #f0373c;
}

#main-menu-wrapper li.open .sub-menu a.active,
#main-menu-wrapper li.open .sub-menu a:hover,
#main-menu-wrapper li .sub-menu a:hover {
  background-color: rgba(124, 124, 124, 0.1);;
  border-left: 4px solid #f0373c;
}

.label-accent {
  background-color: #f0373c;
}

.pace .pace-progress {
  background: #f0373c;
  height: 3px;
}
.pace .pace-activity {
  top: 15px;
  right: 15px;
  width: 17px;
  height: 17px;
  border: solid 3px transparent;
  border-top-color: #f0373c;
  border-left-color: #f0373c;
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
  border-radius: 50%;
}
.pace .pace-progress-inner {
  display: block;
  position: absolute;
  right: 0px;
  width: 100px;
  height: 100%;
  box-shadow: 0 0 10px #f0373c, 0 0 5px #f0373c;
  opacity: 1.0;
  -webkit-transform: rotate(3deg) translate(0px, -4px);
  -moz-transform: rotate(3deg) translate(0px, -4px);
  -ms-transform: rotate(3deg) translate(0px, -4px);
  -o-transform: rotate(3deg) translate(0px, -4px);
  transform: rotate(3deg) translate(0px, -4px);
}

body.pace-done, input[text], button {
  color: #333;
  font-size: 14px;
}
body.page-running, input[text], button {
  color: #333;
  font-size: 14px;
}
body, input[text], button {
  color: #333;
  font-size: 14px;
}

.pagination>.active>a,
.pagination>.active>span,
.pagination>.active>a:hover,
.pagination>.active>span:hover,
.pagination>.active>a:focus,
.pagination>.active>span:focus {
  color: #fff;
  background-color: #f0373c;
  border-color: #f0373c;
}


.btn.btn-primary {
  background: #f0373c;
  color: #ffffff;
}

section header .title {
  text-transform: none;
  color: #333;
  font-weight: 700;
}


.main-wrapper {
  padding: 25px 35px;
}

.page-title {
  marging: 0;
}

section header {
  min-height: 0;
}

section header .title, section .content-body {
  padding-left: 20px;
}
section header .title {
  padding-top: 5px;
  margin-top: 15px;
  margin-bottom: 0;
  padding-bottom: 0;
}
section .content-body {
  padding-bottom: 20px;
  padding-top: 25px;
}


.btn-primary.active.focus,
.btn-primary.active:focus,
/*.btn-primary.active:hover, */
.btn-primary:active.focus,
.btn-primary:active:focus,
.btn-primary:active:hover,
.open>.dropdown-toggle.btn-primary.focus,
.open>.dropdown-toggle.btn-primary:focus,
.open>.dropdown-toggle.btn-primary:hover {
  color: #fff;
  background-color: #f0373c;
  border-color: #000;
}

.page-title h1 {
  color: #333;
  text-transform: none;
}

section a:visited, section a:link {
  color: #f0373c;
}

body, input[text], button {
  color: #333;
}

h1.version {
  color: #999;
}

section.box {
  background-color: #ffffff;
  margin: 15px 0;
  box-shadow: 0 1px 3px rgba(33,33,33,.2);
  -webkit-box-shadow: 2px 3px 3px 0 rgba(0,0,0,.2);
  -moz-box-shadow: 2px 3px 3px 0 rgba(0,0,0,.2);
  -o-box-shadow: 2px 3px 3px 0 rgba(0,0,0,.2);
  -ms-box-shadow: 2px 3px 3px 0 rgba(0,0,0,.2);
}

.btn-default.active, .btn-default:hover, .btn-default:active, .btn-default:focus {
  background: #f0373c;
  color: #ffffff;
}

.form-description {
  margin-bottom: 2.5em;
}

.form-label {
  font-weight: bold;
  color: #555555;
}


h1, h2, h3, h4, h5, h6 {
  margin-top: 15px;
}

h1.title,
section.box h3:first-of-type
{
  margin-top: 0px;
}


.form-check label {
  font-weight: normal;
  color: #555555;
  padding-left: 5px;
}


body, input[text], button {
  color: #555;
  font-family: Cambria, Georgia;
}


.form-control {
  padding: 20px 10px;
  font-size: 16px;
}

.form-control::-webkit-input-placeholder { color: #bbb; }  /* WebKit, Blink, Edge */
.form-control:-moz-placeholder { color: #bbb; }  /* Mozilla Firefox 4 to 18 */
.form-control::-moz-placeholder { color: #bbb; }  /* Mozilla Firefox 19+ */
.form-control:-ms-input-placeholder { color: #bbb; }  /* Internet Explorer 10-11 */
.form-control::-ms-input-placeholder { color: #bbb; }  /* Microsoft Edge */

.form-control:focus, .has-focus .form-control {
  background: #fff;
  border-color: #666;
  outline: 0;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}

.help-block {
  color: #666;
  font-style: italic;
}

.btn.active.focus, .btn.active:focus, .btn.focus, .btn:active.focus, .btn:active:focus, .btn:focus {
  outline: 2px auto #a00;
  outline-offset: -2px;
}

.btn-primary.disabled, .btn-primary.disabled.active, .btn-primary.disabled.focus, .btn-primary.disabled:active, .btn-primary.disabled:focus, .btn-primary.disabled:hover, .btn-primary[disabled], .btn-primary[disabled].active, .btn-primary[disabled].focus, .btn-primary[disabled]:active, .btn-primary[disabled]:focus, .btn-primary[disabled]:hover, fieldset[disabled] .btn-primary, fieldset[disabled] .btn-primary.active, fieldset[disabled] .btn-primary.focus, fieldset[disabled] .btn-primary:active, fieldset[disabled] .btn-primary:focus, fieldset[disabled] .btn-primary:hover {
  background-color: #f0373c;
  background-image: none;
}


.has-error .help-block {
  color: #666;
}
.has-error ul {
  color: #f0373c;
}

ul.validation-errors {
  padding: 10px 20px;
}

.alert-danger, .alert-error {
  background-color: #f0373c;
}

.alert-icon {
  width: 20px;
}

.username {
  font-size: 14px;
  font-weight: bold;
  text-decoration:none;
  color: white;
  text-transform: none;
}


.page-topbar .message-toggle-wrapper, .page-topbar .notify-toggle-wrapper, .page-topbar .searchform, .page-topbar li.profile {
  opacity: 100;
}

#main-menu-wrapper li ul.sub-menu {
  display: block;
  list-style-type: none;
  font-size: 14px;
  width: 100%;
}

#main-menu-wrapper li .sub-menu a {
  color: #333;
  margin-bottom: 1px;
  padding-left: 55px;
  border-left: 4px solid transparent;
}


form .form-optional {
  color: #bbb;
  padding-left: 5px;
}

.glyphicon, .fa {
  font-size: 14px;
  margin-right: 4px;
}

.btn :disabled {
  opacity: 0.8;
}

.loading-indicator {
  color: #999;
  font-size: 16px;
}

h1 .service-version {
  color: #aaa;
  padding-left: 8px;
}

.modal-title.alert-danger {
  border: none;
}

.label {
  padding: 6px 10px;
  font-weight: 400;
  color: #fff;
  -webkit-border-radius: 0;
  -moz-border-radius: 0;
  border-radius: 5px;
  text-shadow: none;
  font-size: 0.9em;
  margin-right: 5px;
}

p {
  font-size: 14px;
}

.page-title h1 {
  margin-bottom: 10px;
}

.capacity-box {
  margin-top: 10px;
  text-align: center;
}

.capacity-box .panel-heading {
}

.capacity-box .panel-body {
  font-size: 18px;
  font-weight: bold;
  color: #555;
}

.service-title {
  font-weight: bold;
}

.service-listing a:hover, .service-listing a:focus {
  text-decoration: none !important;
}

.service-description {
  margin-left: 5px;
  text-decoration: none !important;
  color: #555;
}

.fees-box {
  margin-top: 10px;
  text-align: center;
  color: #555;
}

.fees-box .panel-heading {

}

.fees-box .panel-body {
  font-size: 18px;
  font-weight: bold;
}

